test/good/loops/while02.px

x = 0

func f(y: Int): Int def
    x += 1
    return y

a = 0
b = 10
c = 20

while f(a) < f(b) <= f(c) do
    a += 2
    b += 1

print a, b, c
print x
