test/bad/functions/args1.px

func f(Int x, Char y) Bool def
    return x == y

func main() Int def
    return 0
